--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,2 +1,9 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
+
+<h2>Would you like to delete this post?</h2>
+
+<form method="POST" action="/posts/<%=@post.id%>">
+  <input type="hidden" name="_method" value="DELETE" />
+  <input type="submit" value="delete" />
+</form>
